# aurora

./: .env.example  .gitignore  .gitmodules  AGENTS.md  FEASIBILITY_ANALYSIS.md  IDEA.md  PRODUCT_VISION.md  README.md  ROADMAP.md  eslint.config.mjs  package.json  skills-lock.json  tsconfig.base.json
.agents/: PROJECT_CONTEXT.md  state.json
.agents/flow/: it_000001_PRD.json  it_000001_product-requirement-document.md  it_000001_progress.json  it_000002_PRD.json  it_000002_progress.json  it_000003_PRD.json  it_000003_compliance-report.md  it_000003_progress.json  it_000004_PRD.json  it_000004_product-requirement-document.md  it_000004_progress.json
apps/backend/: package.json  tsconfig.json
apps/backend/__tests__/: us-001-narrator.test.ts  us-001.test.ts  us-002.test.ts  us-003.test.ts  us-004.test.ts  us-006.test.ts  us-007.test.ts
apps/backend/src/: index.ts
apps/frontend/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  visual-verification.md  vite.config.ts  vitest.config.ts
scripts/: dev-all.sh
services/media/: config.py  main.py  package.json  pyproject.toml
services/media/jobs/: image_jobs.py  store.py  worker.py
services/media/pipelines/: comfy_diffusion.py  image.py  state.py
services/media/routers/: generate.py  health.py  image_jobs.py
services/media/schemas/: generate.py
services/media/tests/: conftest.py  test_main.py  test_us_001_submit_image_job.py  test_us_002_poll_job_status.py  test_us_003_health_pipeline_status.py  test_us_004_graceful_error_timeout_handling.py  test_us_005_modular_package_refactor.py
(+27 files in other folders)
