[project]
name = "aurora-media-service"
version = "0.1.0"
description = "Media generation service for Aurora"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "comfy-diffusion",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.0.0,<9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
